--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <h1 class="header">Personal Blogtes</h1>
+        <h1 class="header">Personal Blog</h1>
         <span class="about"><a href="about.html">About</a></span>
     </body>
 </html>
